@@ -5,6 +5,9 @@ phpMyAdmin - Changelog
 $Id$
 $Source$
 
+2003-11-27 Marc Delisle  <lem9@users.sourceforge.net>
+    * libraries/display_tbl.lib.php: bug 816666: sort order and aliases
+
 2003-11-26 Alexander M. Turek  <lifeforrent@derrabus.de>
     * Almost every file:
       - Replaced all include / require commands by require_once where possible;
